--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Backend</title>
 </head>
 <body>
-    <script src="0-dynamic-import.js"></script>
+    <script src="./0-dynamic-import.js"></script>
 </body>
 </html>
